Fix Text spacing

--- a/main.css
+++ b/main.css
@@ -34,3 +34,22 @@ li a:hover {
 .active {
     background-color: rgb(17, 17, 17)
 }
+
+div {
+    background-color: rgb(228, 224, 224);
+    width: 750px;
+    border-radius: 5%;
+    box-shadow: rgb(51, 51, 51);
+}
+
+h2 {
+    text-align: center;
+    padding: 20px;
+}
+
+p {
+    text-align: justify;
+    padding: 25px;
+    border: 0;
+    margin: 0;
+}
